# data-runner

./: .gitignore  COMMANDS.md  DEVELOPER.md  README.md  SCRIPTS.md  activate_and_run.sh  init_test.py  install.sh  project_patterns.md  pyproject.toml  requirements.txt  run.sh  setup.sh  test.sh
app/: __init__.py  __main__.py  cli.py  connections.py  dependency_manager.py  env_processor.py  progress_bar.py  repository.py  runner.py  sql_utils.py  types.py  validation_engine.py  variable_processor.py
config/: ENV_VARIABLES.md  README.md  connections.json.example  jobs.json.example
tests/: __init__.py  test_config_parsing.py  test_runner_sqlite.py
validations/: example_validation.py  per_record_validation.py  user_data_validation.py  user_per_record_validation.py
